Finish text edits for Chapter 3.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -213,18 +213,29 @@
   in all of the other spaces.}
 
 \fntext{maj3-17}{%
-  \cite[85]{levine:1995}.}
+  These changes are again taken from \emph{The Real Book}, and are the
+  standard changes for the tune; nearly all recordings agree with this set of
+  changes.}
 
 \fntext{maj3-18}{%
-  % xxx note about bubble notation
-  [note about bubble notation, citation from GMIT]
-}
+  The ``bubble notation'' used in Figure \ref{maj3:miss-jones-bridge} is first
+  used in \citetitle[205--6]{lewin:gmit}. It is, as Lewin describes it, a
+  ``network-of-networks'': each bubble here represents a single \tfo network
+  (the unlabeled arrows are again TF transformations), and these networks are
+  connected by larger-scale transpositions. In this figure, the \slideS
+  transformations breaks through the bubble itself, and describes a
+  transformation directly from \h{GbM7} to \h{Gm7}.}
 
 \fntext{pvl-1}{%
   In addition to including the major seventh chords, this figure corrects some
   errors in Cohn's version (\citetitle[Fig.~7.16, 158]{cohn:2012}): in his
-  version, the voice leading to and from the French sixth chords is incorrect
-  in two of the three ``towers.''}
+  version, the voice leading to and from the French sixth chords and minor
+  seventh chords is incorrect. My thanks to Thomas Cooke-Dickens for helping
+  to find many of these errors.}
+
+\fntext{pvl-1b}{%
+  The French sixth chord, set class (0268), is of course invariant when
+  transposed by tritone, so both roots are given in this figure.}
 
 \fntext{pvl-2}{%
   % xxx reread this, check for cross-type
