--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -128,7 +128,14 @@
 % hyperref
 % --------
 % (Provides PDF table of contents)
-\usepackage[unicode,bookmarks,bookmarksnumbered,pdfencoding=auto,hyperfootnotes=false,linktocpage]{hyperref}
+\usepackage[
+    unicode,
+    bookmarks,
+    bookmarksnumbered,
+    hidelinks,
+    pdfencoding=auto,
+    hyperfootnotes=false,
+    linktocpage]{hyperref}
 \urlstyle{same}
 
 % examples/captions
