Add footnote about Isotope functional analysis.

--- a/diss.bib
+++ b/diss.bib
@@ -406,7 +406,6 @@ Theory} }
   journal     = {Oxford Handbooks Online},
   year        = {2014},
   url         = {http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199935321.001.0001/oxfordhb-9780199935321-e-003}
-                
 }
 
 @inproceedings{hook:heptachords,
@@ -430,6 +429,17 @@ Theory} }
   address     = {New York},
   publisher   = {Oxford University Press},
   year        = {forthcoming}
+}
+
+@incollection{hyer:2011,
+  author      = {Hyer, Brian},
+  editor      = {Gollin, Edward and Rehding, Alexander},
+  booktitle   = {The Oxford Handbook of Neo-Riemannian Music Theories},
+  title       = {What Is a Function?},
+  address     = {New York},
+  publisher   = {Oxford University Press},
+  pages       = {92--139},
+  year        = {2011}
 }
 
 @book{jaffe:1996,
@@ -539,6 +549,7 @@ Theory} }
   author      = {Lewin, David},
   title       = {Generalized Musical Intervals and Transformations},
   shorttitle  = {GMIT},
+  address     = {New York},
   publisher   = {Oxford University Press},
   year        = {\mkbibbrackets{1987} 2007}
 }
