--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -48,6 +48,11 @@
   TF\tsub{blues} from the last chapter; for now, we can simply understand this
   variant as BD $\odot$ \textsc{7th}.}
 
+\fntext{mts-7b}{%
+  The question of the meaning of ``function'' is is a difficult one. Here I
+  mean the term as Brian Hyer does: ``it is not what a chord \emph{does} that
+  matters, but what it \emph{is}: a functional designation names a chord's
+  \emph{being}'' \parentext{\headlesscite[109, emphasis original]{hyer:2011}}.}
 
 \fntext{mts-8}{%
   The word ``prolongational'' in this sentence is admittedly problematic,
