Verify consistency of minor[-]third[s] throughout.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -200,8 +200,8 @@
   cycle'' \parentext{\cite[15]{santa:2003}}.}
 
 \fntext{maj3-14}{%
-  The major-thirds figure represents a kind of cross-section of the
-  minor-thirds torus: to see this clearly, locate the key areas C, \Aflat, and
+  The major-third figure represents a kind of cross-section of the
+  minor-third torus: to see this clearly, locate the key areas C, \Aflat, and
   E on both Figure \ref{mts:m3-space} and Figure \ref{maj3:maj3-space}.}
 
 \fntext{maj3-15}{%
@@ -243,7 +243,6 @@
   transposed by tritone, so both roots are given in this figure.}
 
 \fntext{pvl-2}{%
-  % xxx reread this, check for cross-type
   This is not terribly surprising; our ordered triples are trichords of set
   classes (015), (016), and (026). Richard Cohn has
   shown \parentext{\citetitle{cohn:1997}} that the consonant triad, (037), is
