A few more minor changes to chapter 3.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -27,10 +27,11 @@
   which is much more common in classical music.}
 
 \fntext{mts-5}{%
-  Keith Waters has called this period ``jazz's second practice'' in
-  \headlesscite{waters:2013}. Waters, along with J.~Kent Williams, has explored
-  post-tonal jazz harmony using the Tonnetz and hyper-hexatonic systems familiar
-  from classical theory; see \headlesscite{waterswilliams:2010}.}
+  Keith Waters has called this period ``jazz's second practice''
+  \parentext{\headlesscite{waters:2013}}. Waters, along with J.~Kent Williams,
+  has explored post-tonal jazz harmony using the Tonnetz and hyper-hexatonic
+  systems familiar from classical theory; see
+  \headlesscite{waterswilliams:2010}.}
 
 \fntext{mts-6}{%
   ``Isotope'' was first recorded on Henderson's album \emph{Inner Urge},
