--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -192,7 +192,7 @@
 
 % scale degrees /music stuff
 \newcommand{\sd}[1]{\ensuremath{\hat{#1}}}
-\renewcommand{\flat}{{\fontspec[Scale=MatchUppercase]{Times + Musical}f}}
+\renewcommand{\flat}{{\fontspec[Scale=1.05]{Times + Musical}f}}
 \renewcommand{\sharp}{{\fontspec[Scale=MatchUppercase]{Times + Musical}s}}
 \newcommand{\nat}{{\fontspec[Scale=MatchUppercase]{Times + Musical}n}}
 
