--- a/diss.tex
+++ b/diss.tex
@@ -7,10 +7,10 @@
 \input{footnotes/ch1-notes}
 \input{footnotes/ch2-notes}
 \input{footnotes/ch3-notes}
+\input{footnotes/ch4-notes}
 
 % control what we’re compiling
-\includeonly{chapters/ch3}
-
+\includeonly{chapters/ch4}
 
 \begin{document}
 
@@ -20,6 +20,7 @@
   \include{chapters/ch1}
   \include{chapters/ch2}
   \include{chapters/ch3}
+  \include{chapters/ch4}
 \backmatter
   \include{chapters/back}
 
