Restructure appendices/back matter.
This way they're numbered properly, and work without too much
difficulty. Note that the appendix environment has to go before the back
matter, otherwise they don't get numbered properly.

--- a/appendices/tune-list.tex
+++ b/appendices/tune-list.tex
@@ -1,4 +1,6 @@
-\chapter*{List of Recordings}
+\chapter{List of Recordings}
+
+\singlespacing
 
 \blankfootnote{Jazz discography in the 21st century can be frustrating, given
   the many different formats and reissues of original sources. I have tried to
