--- a/diss.tex
+++ b/diss.tex
@@ -21,6 +21,7 @@
   \include{chapters/ch2}
   \include{chapters/ch3}
   \include{chapters/ch4}
+  \include{chapters/appendices}
 \backmatter
   \include{chapters/back}
 
