--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -111,6 +111,8 @@
 \titleformat*{\section}{\large}
 \titleformat*{\subsection}{\normalsize\scshape}
 
+\usepackage[titletoc]{appendix}
+
 % page header
 % -----------
 \usepackage{fancyhdr}
@@ -148,6 +150,7 @@
 
 \usepackage[section]{placeins}
 \usepackage{float}
+\usepackage{pdfpages}
 
 % provide opts to includegraphics as optional arg
 \newcommand{\centerGraphic}[2][]{%
