Initial text for chapter 4.

--- a/diss.bib
+++ b/diss.bib
@@ -43,6 +43,17 @@ Theory} }
   year        = {1997}
 }
 
+@book{berendt:jazzbook,
+  author      = {Berendt, Joachim-Ernst and Huesmann, Günther},
+  title       = {The Jazz Book: From Ragtime to the 21st Century},
+  address     = {Chicago},
+  publisher   = {Lawrence Hill},
+  edition     = {7th ed.},
+  year        = {2009},
+  translator  = {Bredigkeit, {H.~and B.} and Morgenstern, Dan and Nevill, Tim
+                and Bishop, Jeb}
+}
+
 @book{berklee:harmony,
   author      = {Mulholland, Joe and Hojnacki, Tom},
   title       = {The Berklee Book of Jazz Harmony},
@@ -101,6 +112,18 @@ Theory} }
   note        = smt
 }
 
+@article{burt:2002,
+  author      = {Burt, Peter},
+  title       = {Takemitsu and the Lydian Chromatic Concept of George
+                Russell},
+  shorttitle  = {Takemitsu and the Lydian Chromatic Concept},
+  journal     = {Contemporary Music Review},
+  volume      = {21},
+  number      = {4},
+  pages       = {79--109},
+  year        = {2002}
+}
+
 @article{callender:1998,
   author      = {Callender, Clifton},
   title       = {Voice-Leading Parsimony in the Music of Alexander Scriabin},
@@ -152,6 +175,16 @@ Theory} }
   pages       = {181--93},
   month       = oct,
   year        = {1998}
+}
+
+@article{clement:2014,
+  author      = {Clement, Brett},
+  title       = {A New Lydian Theory for Frank Zappa's Modal Music},
+  journal     = {Music Theory Spectrum},
+  volume      = {36},
+  number      = {1},
+  year        = {2014},
+  issue       = {Spring}
 }
 
 @article{cloughmyerson:1985,
