--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -1,5 +1,30 @@
 %% Chapter 4 notes
 
+\fntext{lcc-1}{%
+  \cite{russell:lcc}. References to the book in this dissertation will be to
+  this final edition (Russell died in 2009), with the caveat that some details
+  have changed from earlier editions. The early editions of the \emph{Lydian
+  Chromatic Concept} were more like pamphlets---comb-bound sheaves of copy
+  paper---and have not found their way into many libraries. I am thankful to
+  David Baker for loaning me his original edition for examination.}
+
+\fntext{lcc-2}{%
+  \emph{Encyclopedia of Popular Music}, s.v.~``George Russell,'' last modified
+  July 4, 2006, \url{http://www.oxfordmusiconline.com/subscriber/article/epm/48476}.}
+
+\fntext{lcc-3}{%
+  \cite[602]{berendt:jazzbook}. Takemitsu's fascination with the
+  \emph{Concept} is discussed at length in \cite{burt:2002}.}
+
+\fntext{lcc-4}{%
+  \cite{tymoczko:1997}; and \headlesscite[366n13]{tymoczko:2011}. My intent
+  here is not to single out Tymoczko, but only to note that modern theorists
+  who engage directly with Russell's ideas do not always mention his work. The
+  most complete treatments of the \emph{Concept} in modern scholarship are
+  Burt's previously-cited article on Takemitsu and Brett Clement's work on
+  Frank Zappa (who, while influenced by jazz, is not part of the jazz
+  mainstream that is the focus of this study); see \headlesscite{clement:2014}.}
+
 
 %%% Local Variables:
 %%% mode: latex
