Add some text about the nature of transcription.
This also clarifies a point in the tune list about the selection of
recordings.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -3,7 +3,26 @@
 \singlespacing
 
 % xxx Write something about transcription generally here
-(text here)
+Transcription is a notoriously difficult problem in jazz. As Steve Larson
+(among others) has noted, any transcription is also, in some sense, an
+analysis.\footcite[2]{larson:2009} In the transcriptions that follow, I have
+(in general) only notated the solo line, focusing primarily on the pitches and
+rhythms. This means that many of the so-called ``secondary parameters'' are
+absent from the notation: dynamics, intonation, phrasing, issues of timing,
+etc. To that end, the transcriptions should be seen as companions to the
+source recordings, not replacements for them.
+
+In the transcriptions of the rhythm changes tunes, no chord symbols are given.
+One of the principal arguments of Chapter 5 is that the chord symbols are
+somewhat fluid through the course of a performance; I have simply omitted the
+chord symbols rather than assigning one based on the solo line. In the
+transcriptions, the notes remain more-or-less uninterpreted (though the
+notation of accidentals is a question of interpretation); examples in the text
+refer to a given passage's harmonic context. Formal designations follow
+Larson's convention: $2\mathrm{A}_3$ refers to the third A section of the
+second chorus, $4\mathrm{B}$ refers to the B section of the fourth chorus, and
+so on. Timestamps from the reference recording are given at the beginning of
+each chorus.
 
 \phantomsection
 \addcontentsline{toc}{section}{``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk}
