--- a/appendices/tune-list.tex
+++ b/appendices/tune-list.tex
@@ -4,11 +4,11 @@
 
 \blankfootnote{Jazz discography in the 21st century can be frustrating, given
   the many different formats and reissues of original sources. I have tried to
-  be as clear as possible here, listing both original release information and
-  more readily available reissues, when available. Three online sources have
-  been invaluable in compiling this information: The Jazz Discography
-  Project (\url{http://www.jazzdisco.org}; Nobuaki Togashi, Kohji ``Shaolin''
-  Matsubayashi, and Masayuki Hatta, maintainers); Discogs
+  be as clear as possible in the discography, listing both original release
+  information and more readily available reissues, when available. Three
+  online sources have been invaluable in compiling this information: The Jazz
+  Discography Project (\url{http://www.jazzdisco.org}; Nobuaki Togashi, Kohji
+  ``Shaolin'' Matsubayashi, and Masayuki Hatta, maintainers); Discogs
   (\url{http://www.discogs.com}; created by Kevin Lewandowski); and AllMusic
   (\url{http://www.allmusic.com}; All Media Network).}%
 %
@@ -19,6 +19,8 @@ chosen because they present clear statements of the standard changes analyzed
 in the text. Recordings are listed here only by the artist and album title;
 full details can be found in the discography that follows. In cases where a
 tune has a recording that is considered definitive, it is marked with a star.
+(This list reflects my own preference for pianists and saxophonists, and is by
+no means exhaustive.)
 
 \section*{Chapter 1}
 
