Add text about Russell's Lydian organization.

--- a/diss.bib
+++ b/diss.bib
@@ -760,14 +760,23 @@ Theory} }
   year        = {2011}
 }
 
+@book{russell:1959,
+  author      = {Russell, George},
+  title       = {The Lydian Chromatic Concept of Tonal Organization},
+  address     = {New York},
+  publisher   = {Concept},
+  year        = {1959}
+}
+
 @book{russell:lcc,
   author      = {Russell, George},
   title       = {The Lydian Chromatic Concept of Tonal Organization},
-  shorttitle  = {The Lydian Chromatic Concept},
+  shorttitle  = {Lydian Chromatic Concept},
   volume      = {1},
   address     = {Brookline, MA},
   publisher   = {Concept},
-  year        = {\mkbibbrackets{1953} 2001},
+  edition     = {4th ed.},
+  year        = {2001},
   note        = {\textit{The Art and Science of Tonal Gravity}}
 }
 
