--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -2,11 +2,14 @@
 
 \fntext{lcc-1}{%
   \cite{russell:lcc}. References to the book in this dissertation will be to
-  this final edition (Russell died in 2009), with the caveat that some details
-  have changed from earlier editions. The early editions of the \emph{Lydian
-  Chromatic Concept} were more like pamphlets---comb-bound sheaves of copy
-  paper---and have not found their way into many libraries. I am thankful to
-  David Baker for loaning me his original edition for examination.}
+  this final edition (Russell died in 2009) unless otherwise noted. Though a
+  full reception history of the \emph{Lydian Chromatic Concept} is beyond the
+  scope of this project, it is worth noting that the later editions focus more
+  heavily on the theory than the earlier editions, which were more practical
+  in nature. In the original edition, the section on theoretical foundations
+  appears after eight initial ``lessons''; in the 2001 edition, this material
+  has been moved front and center, to Chapter 1.\nocite{russell:1959}}
+
 
 \fntext{lcc-2}{%
   \emph{Encyclopedia of Popular Music}, s.v.~``George Russell,'' last modified
@@ -25,6 +28,26 @@
   Frank Zappa (who, while influenced by jazz, is not part of the jazz
   mainstream that is the focus of this study); see \headlesscite{clement:2014}.}
 
+\fntext{lcc-5}{%
+  I am using the term ``scale'' here as Russell does: he always refers to the
+  Lydian as a scale rather than a mode. Dmitri Tymoczko has argued against
+  this usage, saying that there is a ``widespread tendency to elide the
+  difference between scale and
+  mode'' \parentext{\citetitle[366n14]{tymoczko:2011}}. To call the Lydian a mode
+  would imply that it is simply a reordering of a major scale, though, and for
+  Russell the two are fundamentally different objects.}
+
+\fntext{lcc-6}{%
+   \cite*[3]{russell:lcc}.}
+
+\fntext{lcc-7}{%
+  \headlesscite[8--9]{russell:lcc}.}
+
+\fntext{lcc-8}{%
+  Russell does not mention that this chord sounds dissonant because of the
+  minor ninth between F\nat\ and E, the third of the chord. In the \h{CM7s11}
+  chord the minor ninth is turned into a major seventh between G and F\sharp,
+  which is much more easily accepted as a consonance---especially in jazz.}
 
 %%% Local Variables:
 %%% mode: latex
