Clarify text on Lydian generation, plus graphic.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -44,7 +44,7 @@
   \headlesscite[8--9]{russell:lcc}.}
 
 \fntext{lcc-8}{%
-  Russell does not mention that this chord sounds dissonant because of the
+  Russell does not mention that the first chord sounds dissonant because of the
   minor ninth between F\nat\ and E, the third of the chord. In the \h{CM7s11}
   chord the minor ninth is turned into a major seventh between G and F\sharp,
   which is much more easily accepted as a consonance---especially in jazz.}
