--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -196,7 +196,7 @@
 % scale degrees /music stuff
 \newcommand{\sd}[1]{\ensuremath{\hat{#1}}}
 \renewcommand{\flat}{{\fontspec[Scale=1.05]{Times + Musical}f}}
-\renewcommand{\sharp}{{\fontspec[Scale=MatchUppercase]{Times + Musical}s}}
+\renewcommand{\sharp}{{\fontspec[Scale=1.05]{Times + Musical}s}}
 \newcommand{\nat}{{\fontspec[Scale=MatchUppercase]{Times + Musical}n}}
 
 % kerning on these characters sucks, so define some kern lengths
