Add text on why Russell is worth considering.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -44,10 +44,15 @@
   \headlesscite[8--9]{russell:lcc}.}
 
 \fntext{lcc-8}{%
-  Russell does not mention that the first chord sounds dissonant because of the
-  minor ninth between F\nat\ and E, the third of the chord. In the \h{CM7s11}
-  chord the minor ninth is turned into a major seventh between G and F\sharp,
-  which is much more easily accepted as a consonance---especially in jazz.}
+  Though Russell attributes this preference to the Lydian scale, we could
+  probably point to another reason: the second chord does not contain the
+  dissonant minor ninth between F\nat\ and E, the third of the chord.}
+
+\fntext{lcc-9}{%
+  My own suspicion is that Russell's work is too new to be considered
+  historically, but not new enough to be taken seriously as modern
+  scholarship. I discuss this idea at length in \headlesscite{mcclimon:2015};
+  see also \cite{adams:2013}.}
 
 %%% Local Variables:
 %%% mode: latex
