--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -197,7 +197,7 @@
 \newcommand{\sd}[1]{\ensuremath{\hat{#1}}}
 \renewcommand{\flat}{{\fontspec[Scale=1.05]{Times + Musical}f}}
 \renewcommand{\sharp}{{\fontspec[Scale=1.05]{Times + Musical}s}}
-\newcommand{\nat}{{\fontspec[Scale=MatchUppercase]{Times + Musical}n}}
+\newcommand{\nat}{{\fontspec[Scale=1.05]{Times + Musical}n}}
 
 % kerning on these characters sucks, so define some kern lengths
 \newcommand{\fklen}{0.5pt}
