--- a/diss.bib
+++ b/diss.bib
@@ -1,6 +1,16 @@
 @string{smt = {paper presented at the annual meeting of the Society for Music
 Theory} }
 
+@unpublished{adams:2013,
+  author      = {Adams, Kyle},
+  title       = {When Does the Present Become the Past? A Re-examination of
+                \mkbibquote{Presentism} and \mkbibquote{Historicism}},
+  address     = {Charlotte, NC},
+  month       = nov,
+  year        = {2013},
+  note        = smt
+}
+
 @book{aebersold:1974,
   author      = {Aebersold, Jamey},
   title       = {The II--V\textsuperscript{7}--I Progression},
@@ -562,6 +572,14 @@ Theory} }
   year        = {2004}
 }
 
+@book{lester:1992,
+  author      = {Lester, Joel},
+  title       = {Compositional Theory in the Eighteenth Century},
+  address     = {Cambridge, MA},
+  publisher   = {Harvard University Press},
+  year        = {1992}
+}
+
 @book{levine:1995,
   author      = {Levine, Mark},
   title       = {The Jazz Theory Book},
@@ -641,6 +659,16 @@ Theory} }
   number      = {1},
   pages       = {1--20},
   year        = {2011}
+}
+
+@unpublished{mcclimon:2015,
+  author      = {McClimon, Michael},
+  title       = {Reconceptualizing the \textit{Lydian Chromatic Concept}:
+                George Russell as Historical Theorist},
+  address     = {St.~Louis, MO},
+  month       = oct,
+  year        = {2015},
+  note        = smt
 }
 
 @article{mcfarland:2012,
