Add text on Russell's eleven member scales.

--- a/diss.bib
+++ b/diss.bib
@@ -799,7 +799,7 @@ Theory} }
 @book{russell:lcc,
   author      = {Russell, George},
   title       = {The Lydian Chromatic Concept of Tonal Organization},
-  shorttitle  = {Lydian Chromatic Concept},
+  shorttitle  = {LCC},
   volume      = {1},
   address     = {Brookline, MA},
   publisher   = {Concept},
