--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -54,6 +54,29 @@
   scholarship. I discuss this idea at length in \headlesscite{mcclimon:2015};
   see also \cite{adams:2013}.}
 
+\fntext{lcc-10}{%
+  Russell defines ``ingoing'' only in passing, saying that ``all music
+  conceived within the equal tempered system maintains a closer (more
+  \textsc{ingoing}) relationship to one tone than to all others, regardless of
+  the music's style or genre'' (\cite[9]{russell:lcc}).}
+
+\fntext{lcc-11}{%
+  Russell's idiosyncratic names have mostly fallen out of use, since they are
+  long and difficult to remember. It is easier for an improvising musician,
+  for example, to recall the ``half--whole diminished scale'' than it is to
+  remember the ``auxiliary diminished blues scale'' (named, incidentally, for
+  the fact that it shares \flat\sd3, \nat\sd3, and \flat\sd7 with the blues
+  scale).}
+
+\fntext{lcc-12}{%
+  Exactly what Russell means by ``seventh'' is also unclear; the dominant
+  seventh is not represented in the nine-tone order, so it seems likely that
+  he means the major seventh chords.}
+
+\fntext{lcc-13}{%
+  \citetitle[16]{russell:lcc}. This entire paragraph is a gloss on the material in
+  pp.~12--17 of the \emph{Concept}.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
