Change all citations to simply "LCC, page."

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -1,14 +1,15 @@
 %% Chapter 4 notes
 
 \fntext{lcc-1}{%
-  \cite{russell:lcc}. References to the book in this dissertation will be to
-  this final edition (Russell died in 2009) unless otherwise noted. Though a
-  full reception history of the \emph{Lydian Chromatic Concept} is beyond the
-  scope of this project, it is worth noting that the later editions focus more
-  heavily on the theory than the earlier editions, which were more practical
-  in nature. In the original edition, the section on theoretical foundations
-  appears after eight initial ``lessons''; in the 2001 edition, this material
-  has been moved front and center, to Chapter 1.\nocite{russell:1959}}
+  \cite{russell:lcc}; hereafter, simply \emph{LCC}. References to the book in
+  this dissertation will be to this final edition (Russell died in 2009)
+  unless otherwise noted. Though a full reception history of the \emph{Lydian
+    Chromatic Concept} is beyond the scope of this project, it is worth noting
+  that the later editions focus more heavily on the theory than the earlier
+  editions, which were more practical in nature. In the original edition, the
+  section on theoretical foundations appears after eight initial ``lessons'';
+  in the 2001 edition, this material has been moved front and center, to
+  Chapter 1.\nocite{russell:1959}}
 
 
 \fntext{lcc-2}{%
@@ -38,7 +39,7 @@
   Russell the two are fundamentally different objects.}
 
 \fntext{lcc-6}{%
-   \cite*[3]{russell:lcc}.}
+   \citetitle[3]{russell:lcc}.}
 
 \fntext{lcc-7}{%
   \headlesscite[8--9]{russell:lcc}.}
@@ -58,7 +59,7 @@
   Russell defines ``ingoing'' only in passing, saying that ``all music
   conceived within the equal tempered system maintains a closer (more
   \textsc{ingoing}) relationship to one tone than to all others, regardless of
-  the music's style or genre'' (\cite[9]{russell:lcc}).}
+  the music's style or genre'' (\citetitle[9]{russell:lcc}).}
 
 \fntext{lcc-11}{%
   Russell's idiosyncratic names have mostly fallen out of use, since they are
