Finish up section on Lydian organization.
This section is probably too long, but I think it's all necessary.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -78,6 +78,13 @@
   \citetitle[16]{russell:lcc}. This entire paragraph is a gloss on the material in
   pp.~12--17 of the \emph{Concept}.}
 
+\fntext{lcc-14}{%
+  The objection is perhaps obvious: if the ideas about Lydian tonal
+  organization have fallen by the wayside, why bother trying to resuscitate
+  them? As I hope to show in the following sections, Russell's systematic
+  approach is useful as a means of formalizing what has since become implicit
+  knowledge.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
