Add initial text on chord-scale equivalence.

--- a/diss.bib
+++ b/diss.bib
@@ -926,6 +926,7 @@ Theory} }
   author      = {Tymoczko, Dmitri},
   title       = {The Consecutive-Semitone Constraint on Scalar Structure},
   subtitle    = {A Link Between Impressionism and Jazz},
+  shorttitle  = {The Consective-Semitone Constraint},
   journal     = {Intégral},
   volume      = {11},
   pages       = {135--79},
