--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -85,6 +85,24 @@
   approach is useful as a means of formalizing what has since become implicit
   knowledge.}
 
+\fntext{lcc-15}{%
+  Dmitri Tymoczko makes the argument that something like chord--scale theory
+  existed in the music of the Impressionists, and suggests that jazz musicians
+  may have discovered it by listening to Debussy and
+  Ravel \parentext{\citetitle[152 and 173]{tymoczko:1997}}. Given the initial
+  reception of the \emph{Concept} as the first real theory of jazz, I am
+  skeptical of this claim, and treat Russell's ideas as their first
+  appearance. Certainly, though, the tenets of chord--scale theory can be
+  applied to other musics: Russell himself examines passage of Bach,
+  Beethoven, and Ravel, among others.}
+
+\fntext{lcc-16}{%
+  \citetitle[20--21]{russell:lcc}. In order to avoid confusion, we will use
+  the term ``chord-scale'' rather than ``chordmode'' from this point on.
+  Russell's interchangeable use of ``chord,'' ``chordmode,'' and ``mode''
+  tends to confuse more than it helps, and ``chord-scale'' is the generally
+  accepted term today.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
