Add text on principal chordmodes.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -103,6 +103,15 @@
   tends to confuse more than it helps, and ``chord-scale'' is the generally
   accepted term today.}
 
+\fntext{lcc-17}{%
+  This process is simplified somewhat by the inclusion of a foldout chart in
+  the book (in the first published edition, it was referred to as the ``Lydian
+  slide rule''). The chart is somewhat difficult to understand, though, and
+  including it here would likely confuse matters.}
+
+\fntext{lcc-18}{%
+  This table summarizes the material in \citetitle[23--29]{russell:lcc}.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
