Add Isotope transcription (Joe Henderson).

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -24,8 +24,24 @@ second chorus, $4\mathrm{B}$ refers to the B section of the fourth chorus, and
 so on. Timestamps from the reference recording are given at the beginning of
 each chorus.
 
+\section*{List of Transcriptions}
+
+\begin{compactitem}
+    \item ``Isotope'' -- Joe Henderson (p.~\pageref{transcription:isotope})
+    \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk
+      (p.~\pageref{transcription:rhythm-a-ning})
+\end{compactitem}
+
+\newpage
+
+\phantomsection
+\addcontentsline{toc}{section}{``Isotope'' -- Joe Henderson}
+\label{transcription:isotope}
+\includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/isotope.pdf}
+
 \phantomsection
 \addcontentsline{toc}{section}{``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk}
+\label{transcription:rhythm-a-ning}
 \includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/rhythm-a-ning.pdf}
 
 %%% Local Variables:
