Text explaining Russell's parent/member scales.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -93,7 +93,7 @@
   reception of the \emph{Concept} as the first real theory of jazz, I am
   skeptical of this claim, and treat Russell's ideas as their first
   appearance. Certainly, though, the tenets of chord--scale theory can be
-  applied to other musics: Russell himself examines passage of Bach,
+  applied to other musics: Russell himself examines passages of Bach,
   Beethoven, and Ravel, among others.}
 
 \fntext{lcc-16}{%
@@ -111,6 +111,19 @@
 
 \fntext{lcc-18}{%
   This table summarizes the material in \citetitle[23--29]{russell:lcc}.}
+
+\fntext{lcc-19}{%
+  His treatment of Mode II is similarly problematic, as Lydian Mode II (a
+  vertical scale) is distinct from the Major flat seventh scale (a horizontal
+  one). }
+
+\fntext{lcc-20}{%
+  There are eight \abbrev{PMG}s rather than seven because Russell needs to
+  account for the sharp fifth in the Lydian augmented scale. Other altered
+  scale degrees (\flat{}II, \flat{}III) are seen simply as alterations and are
+  not counted among the principal genres. Russell does not explain why, but
+  the reason is probably related to the fact that the +V genre gives rise to
+  an important class of chords (7+5), while the others do not.}
 
 %%% Local Variables:
 %%% mode: latex
