Change citations of Russell to in-text.
The dozens of footnotes that just had a citation from the Concept were
getting obnoxious, so I put them as parenthetical citations in-text
instead.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -1,7 +1,7 @@
 %% Chapter 4 notes
 
 \fntext{lcc-1}{%
-  \cite{russell:lcc}; hereafter, simply \emph{LCC}. References to the book in
+  \cite{russell:lcc}; hereafter, simply \lcc. References to the book in
   this dissertation will be to this final edition (Russell died in 2009)
   unless otherwise noted. Though a full reception history of the \emph{Lydian
     Chromatic Concept} is beyond the scope of this project, it is worth noting
@@ -38,12 +38,6 @@
   would imply that it is simply a reordering of a major scale, though, and for
   Russell the two are fundamentally different objects.}
 
-\fntext{lcc-6}{%
-   \citetitle[3]{russell:lcc}.}
-
-\fntext{lcc-7}{%
-  \headlesscite[8--9]{russell:lcc}.}
-
 \fntext{lcc-8}{%
   Though Russell attributes this preference to the Lydian scale, we could
   probably point to another reason: the second chord does not contain the
@@ -59,7 +53,7 @@
   Russell defines ``ingoing'' only in passing, saying that ``all music
   conceived within the equal tempered system maintains a closer (more
   \textsc{ingoing}) relationship to one tone than to all others, regardless of
-  the music's style or genre'' (\citetitle[9]{russell:lcc}).}
+  the music's style or genre'' (\lcc 9).}
 
 \fntext{lcc-11}{%
   Russell's idiosyncratic names have mostly fallen out of use, since they are
@@ -75,8 +69,7 @@
   he means the major seventh chords.}
 
 \fntext{lcc-13}{%
-  \citetitle[16]{russell:lcc}. This entire paragraph is a gloss on the material in
-  pp.~12--17 of the \emph{Concept}.}
+  The remainder of this paragraph is a gloss on the material in \lcc 12--17.}
 
 \fntext{lcc-14}{%
   The objection is perhaps obvious: if the ideas about Lydian tonal
@@ -97,11 +90,13 @@
   Beethoven, and Ravel, among others.}
 
 \fntext{lcc-16}{%
-  \citetitle[20--21]{russell:lcc}. In order to avoid confusion, we will use
-  the term ``chord-scale'' rather than ``chordmode'' from this point on.
-  Russell's interchangeable use of ``chord,'' ``chordmode,'' and ``mode''
-  tends to confuse more than it helps, and ``chord-scale'' is the generally
-  accepted term today.}
+  In order to avoid confusion, we will generally respect the distinction
+  between chord and scale from this point on. Where we have occasion to refer
+  to the explicit chord--scale equivalence, we will use the term
+  ``chord-scale'' rather than Russell's ``chordmode.'' Russell's
+  interchangeable use of ``chord,'' ``chordmode,'' and ``mode'' tends to
+  confuse more than it helps, and ``chord-scale'' is the generally accepted
+  term in modern scholarship and pedagogy.}
 
 \fntext{lcc-17}{%
   This process is simplified somewhat by the inclusion of a foldout chart in
@@ -110,7 +105,7 @@
   including it here would likely confuse matters.}
 
 \fntext{lcc-18}{%
-  This table summarizes the material in \citetitle[23--29]{russell:lcc}.}
+  This table summarizes the material in \lcc 23--29.}
 
 \fntext{lcc-19}{%
   His treatment of Mode II is similarly problematic, as Lydian Mode II (a
