--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -282,6 +282,7 @@
 
 % uppercase small caps
 \newcommand{\abbrev}[1]{{\abbrevSC #1}}
+\newcommand{\lcc}{\emph{LCC}\xspace}
 
 % math shortcuts
 \newcommand{\lra}{\longrightarrow}
