Add discography info for transcriptions.

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -31,6 +31,7 @@ each chorus.
     \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk
       (p.~\pageref{transcription:rhythm-a-ning})
 \end{compactitem}
+\nocite{henderson:isotope,monk:action}
 
 \newpage
 
