--- a/discog.bib
+++ b/discog.bib
@@ -288,6 +288,17 @@
   type        = {\abbrev{CD}}
 }
 
+@music{monk:action,
+  author      = {Monk, Thelonious},
+  title       = {Thelonious in Action},
+  userd       = {Riverside \abbrev{RLP} 12-262,},
+  origdate    = {1958},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {\abbrev{OJCCD} 1861032},
+  year        = {1992},
+  type        = {\abbrev{CD}}
+}
+
 @music{morgan:cornbread,
   author      = {Morgan, Lee},
   title       = {Cornbread},
