Add text about modern chord-scale theory.
This *should* wrap up all of the background information for this
chapter, and now we can actually start on the new stuff.

--- a/diss.bib
+++ b/diss.bib
@@ -359,6 +359,13 @@ Theory} }
   year        = {2001}
 }
 
+@book{grafnettles:1997,
+  author      = {Graf, Richard and Nettles, Barrie},
+  title       = {The Chord Scale Theory and Jazz Harmony},
+  publisher   = {Advance Music},
+  year        = {1997}
+}
+
 @book{grossman:1964,
   author      = {Grossman, Israel and Magnus, Wilhelm},
   title       = {Groups and Their Graphs},
