--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -120,6 +120,24 @@
   the reason is probably related to the fact that the +V genre gives rise to
   an important class of chords (7+5), while the others do not.}
 
+\fntext{lcc-21}{%
+  \cite[31--94]{levine:1995}. Dmitri Tymoczko summarizes several textbooks'
+  views on chord--scale theory in \citetitle[174--79]{tymoczko:1997}. Other
+  texts that discuss chord--scale theory at length include \cite{jaffe:1996};
+  \cite{berklee:harmony}; \cite{aebersold:handbook}; and
+  \cite{grafnettles:1997}. I am eliding the minor differences in this
+  discussion, since they will not affect the transformational system in the
+  next section. John Bishop provides a good overview of the distinctions in
+  \headlesscite[77--81]{bishop:2012}.}
+
+\fntext{lcc-22}{%
+  Levine and others often describe only the first choice (Russell would say
+  ``most ingoing'') for matching a scale with a chord. Russell's system of
+  substituting other member scales sharing the same Lydian tonic is generally
+  not present in the later texts. For jazz musicians the melodic minor scale
+  refers only to its ascending form, which is generally played in both
+  directions in jazz.}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../diss"
