Add transcription of Kirk's "Blues for Alice."

--- a/appendices/transcriptions.tex
+++ b/appendices/transcriptions.tex
@@ -24,16 +24,31 @@ second chorus, $4\mathrm{B}$ refers to the B section of the fourth chorus, and
 so on. Timestamps from the reference recording are given at the beginning of
 each chorus.
 
+There are several things to note about Kirk's performance of ``Blues for
+Alice.'' First, the album gives his name only as Roland Kirk; he added Rahsaan
+to his name in 1969. Second, Kirk often played multiple instruments
+simultaneously; the transcription tries to make this clear, providing a
+separate staff for each instrument. He played (among other things) a modified
+soprano saxophone known as a manzello; both names are given in the
+transcription.
+
 \section*{List of Transcriptions}
 
 \begin{compactitem}
+    \item ``Blues for Alice'' -- Rahsaan Roland Kirk
+      (p.~\pageref{transcription:blues-for-alice})
     \item ``Isotope'' -- Joe Henderson (p.~\pageref{transcription:isotope})
     \item ``Rhythm-a-ning'' -- Johnny Griffin and Thelonious Monk
       (p.~\pageref{transcription:rhythm-a-ning})
 \end{compactitem}
-\nocite{henderson:isotope,monk:action}
+\nocite{henderson:isotope,monk:action,kirk:freekings}
 
 \newpage
+
+\phantomsection
+\addcontentsline{toc}{section}{``Blues for Alice'' -- Rahsaan Roland Kirk}
+\label{transcription:blues-for-alice}
+\includepdf[pages=-,pagecommand={},noautoscale]{eps/transcriptions/blues-for-alice.pdf}
 
 \phantomsection
 \addcontentsline{toc}{section}{``Isotope'' -- Joe Henderson}
