Add short lit. review on scales in jazz.

--- a/footnotes/ch4-notes.tex
+++ b/footnotes/ch4-notes.tex
@@ -1,5 +1,6 @@
 %% Chapter 4 notes
 
+% Lydian Chromatic Concept
 \fntext{lcc-1}{%
   \cite{russell:lcc}; hereafter, simply \lcc. References to the book in
   this dissertation will be to this final edition (Russell died in 2009)
@@ -137,6 +138,32 @@
   not present in the later texts. For jazz musicians the melodic minor scale
   refers only to its ascending form, which is generally played in both
   directions in jazz.}
+
+% Chord-scale transformations
+
+\fntext{cst-1}{%
+  \cite[Chapter 4 and throughout]{tymoczko:2011}. This work is a culmination
+  of much of his earlier work that incorporates scales; see, for example,
+  \headlesscite{tymoczko:1997} and \headlesscite{tymoczko:2004}.}
+
+\fntext{cst-2}{%
+  % xxx need citation about scale theory generally
+  Nor will we have need of the extensive literature on the abstract
+  structure of scales in general. For an overview, see ??.}
+
+\fntext{cst-3}{%
+  Bishop's primary source is \cite{grafnettles:1997}; \cite{berklee:harmony}
+  covers much of the same material but in a more modern way (neither book
+  mentions Russell at all). The Berklee method systematizes much of Russell's
+  method in a way suitable for teaching undergraduate jazz musicians. Every
+  tone in a scale, for example, is either a chord tone, an avoid note, or a
+  ``tension'': an upper extension that colors the basic
+  sound (\emph{Berklee Book of Jazz Harmony}, xi).}
+
+\fntext{cst-4}{%
+  These triadic approaches also tend towards music that is less clearly tonal,
+  and were devised partly as a means of moving beyond the standard chord-scale
+  approach we are examining here.}
 
 %%% Local Variables:
 %%% mode: latex
